--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=SmartRC-CC1101-Driver-Lib
-version=2.5.7
-author=LSatan
-maintainer=LSatan <littlesatan.666.ls@gmail.com>
+name=CC1101-Orion
+version=0.1
+author= LSatan, Marcelo Q, Murilo A
+maintainer=LSatan <littlesatan.666.ls@gmail.com>, Marcelo Q. <m.mergulhao@hotmail.com>
 sentence=Driver for cc1101.
-paragraph=This driver library can be used for many libraries that use a simple RF ASK module,with the advantages of the cc1101 module.It offers many direct setting options as in SmartRF Studio and calculates settings such as MHz directly.
+paragraph=Customized version of the SmartRC-CC1101-Driver-Lib library modified for use on the Orion CubeSat Project
 category=Device Control
 url=https://github.com/LSatan/SmartRC-CC1101-Driver-Lib
 architectures=avr,esp8266,esp32
-includes=ELECHOUSE_CC1101_SRC_DRV.h
+includes=CC1101_Orion.h
